# Ordeal

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ordeal-config.cmake
include/: CMakeLists.txt  Ordeal.hpp  ordeal.hpp
src/: CMakeLists.txt  main.cpp  ordeal.cpp
test/: CMakeLists.txt  Main.cpp  Tests.cpp  tests.cpp
tests/: Tests.cpp
